--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1249,37 +1249,81 @@ General Styles - FlexSlider
 
 
 
-/* Video */
+/* Cover */
+#phone-cover {
+  display: none;
+}
+  @media (max-width: 640px) {
+    #phone-cover {
+      display: block;
+    }
+
+  }
+
+/* Desktop Video */
 #cover-video {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+
+  /* Center Video */
+  height: 100vh;
+  width: 100%;
+  object-fit: cover;
+  /* position: center; */
 }
-@media (max-width: 640px) {
-  #cover-video {
-    display: none;
-    /* height: 100vh; */
-    /* width: 100%; */
-    /* object-fit: cover; */
-    /* position: center; */
-  }
-
-  #cover-img {
-    height: 100vh;
-    width: 100%;
-    object-fit: cover;
-    background-position: center center;
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-
-
+#cover-buttons {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+#cover-buttons .button {
+  font-family: "Futura";
+  text-align: center;
+  font-size: 16px;
+  letter-spacing: 5px;
+
+  background-color: rgb(0,0,0,0.6);
+  border: none;
+  color: white;
+  padding: 35px 15px;
+  cursor: pointer;
+}
+#cover-buttons a {
+  color: white;
+}
+#cover-buttons a:hover {
+  color: rgb(255, 255, 255, 0.6);
+}
+
+  /* Phone Image */
+  @media (max-width: 640px) {
+    #cover-section {
+      background-image: url("../images/cover.jpg");
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+
+      position: fixed;
+      top: 0;
+      left: 0;
+
+      /* Preserve aspet ratio */
+      min-width: 100%;
+      min-height: 100%;
+    }
+
+    #cover-video { display: none; }
+    /* .navbar-header .navbar-toggle { display: none; }
+    .navbar-header .navbar-brand {
+      text-align: center;
+      width: 100%;
+    } */
+  }
 
 
 
@@ -1289,6 +1333,7 @@ General Styles - FlexSlider
   top: 50%;
   left: 0%;
 }
+
 #about-bg-text h2 {
   font-family: "Roboto";
   letter-spacing: 5px;
